force-app/main/default/objects/Contact_Team__c/Contact_Team__c.object-meta.xml
<CustomObject>
    <label>Contact Team</label>
    <nameField>
        <displayFormat>TM-{00000}</displayFormat>
        <label>Team Member ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>