force-app/main/default/objects/Contact_Team__c/fields/IsCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>IsCurrentUser__c</fullName>
    <formula>IF(
 $User.Email  =  Team_Member__r.Email ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsCurrentUser</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>