force-app/main/default/objects/Contact_Team__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO Works Primary</fullName>
            </value>
            <value>
                <fullName>CEO Works Secondary</fullName>
            </value>
            <value>
                <fullName>CEO Works Tertiary</fullName>
            </value>
            <value>
                <fullName>G100 Primary</fullName>
            </value>
            <value>
                <fullName>G100 Secondary</fullName>
            </value>
            <value>
                <fullName>G100 Tertiary</fullName>
            </value>
            <value>
                <fullName>HLG Primary</fullName>
            </value>
            <value>
                <fullName>HLG Secondary</fullName>
            </value>
            <value>
                <fullName>HLG Tertiary</fullName>
            </value>
            <value>
                <fullName>SSA Primary</fullName>
            </value>
            <value>
                <fullName>SSA Secondary</fullName>
            </value>
            <value>
                <fullName>SSA Tertiary</fullName>
            </value>
            <value>
                <fullName>TMG Primary</fullName>
            </value>
            <value>
                <fullName>TMG Secondary</fullName>
            </value>
            <value>
                <fullName>TMG Tertiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>