force-app/main/default/objects/Contact_Team__c/fields/Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Team_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Team Member</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>PSA Resource</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Teams (Team Member)</relationshipLabel>
    <relationshipName>Contact_Teams1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>